tests/out/error/assign/void.out
tests/out/error/assign/void.in.bt:3:1 error: cannot assign void to variable
